--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
-        <div>
-            Linea de comandos
-        </div>
-        <div class="inputContainer">
-            <div onclick="focusInput()" class="textHolder">
-                <span id="currentCMD">Input</span><input id="inputCMD" autocomplete="off"><span id="suggestionTerminal"></span>
+    <div class="container">
+        <div class="terminalContainer">
+            <div>
+                <div>
+                    Linea de comandos
+                </div>
+                <div class="inputContainer">
+                    <div onclick="focusInput()" class="textHolder">
+                        <span id="currentCMD">Input</span><input id="inputCMD" autocomplete="off"><span id="suggestionTerminal"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
